fix (Terminal): correct flex-wrap on window

--- a/src/components/terminal/terminal.module.css
+++ b/src/components/terminal/terminal.module.css
@@ -3,5 +3,5 @@
 }
 
 .window {
-    @apply flex flex-col flex-wrap h-9/10 px-6;
+    @apply flex flex-col h-9/10 px-6;
 }
